--- a/Leave_Management_Application_System/src/main/resources/application.properties
+++ b/Leave_Management_Application_System/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/leavemanagment
+
+spring.datasource.url=jdbc:mysql://localhost:3306/office_leave_management
 
 spring.datasource.username=root
 
@@ -10,4 +11,4 @@ spring.data.jpa.repositories.enabled=true
 
 spring.jpa.show-sql=true
 
-server.port=8181
+server.port=8585
