--- a/Leave_Management_Application-Admin/src/main/resources/application.properties
+++ b/Leave_Management_Application-Admin/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/leavemanagment
 
+spring.datasource.username=root
+
+spring.datasource.password=Mysql@123
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.data.jpa.repositories.enabled=true
+
+spring.jpa.show-sql=true
+
+server.port=8118
