--- a/Leave_Management_Application/build.gradle
+++ b/Leave_Management_Application/build.gradle
@@ -1,12 +1,12 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.5'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.springframework.boot' version '2.7.9'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.hdfc.leave'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '1.8'
 
 configurations {
 	compileOnly {
@@ -29,6 +29,16 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+	
+		implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.8'
+
+// https://mvnrepository.com/artifact/io.github.classgraph/classgraph
+implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.157'
+// https://mvnrepository.com/artifact/org.webjars/webjars-locator
+implementation group: 'org.webjars', name: 'webjars-locator', version: '0.46'
+
+
+implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.14.1'
 	
 	
 }
